tests/snapshots/stream_response_test__tests__ntest_callback-31.snap
---
source: tests/stream_response_test.rs
expression: "&combined"
---
id: "[id]"
object: chat.completion.chunk
created: "[created]"
model: gpt-4-0613
choices:
  - index: 0
    delta:
      role: assistant
      content: ""
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: As
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " an"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " AI"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: ","
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " I"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " don"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: "'t"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " have"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " feelings"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: ","
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " but"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " I"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: "'m"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " functioning"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " as"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " expected"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: "."
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " Thanks"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " for"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " asking"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: "."
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " How"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " can"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " I"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " assist"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " you"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: " today"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: "?"
      function_call: ~
    finish_reason: ~
  - index: 0
    delta:
      role: ~
      content: ~
      function_call: ~
    finish_reason: stop

